# dirigent-multicore

./: .gitmodules  README.md  cmr.tar  sample-multicpu.cfg  sample-solo-bodytrack.cfg  sample-solo-streamcluster.cfg  sample.cfg
cfgs/corun/native/: bodytrack-sp-native.cfg
cfgs/corun/simmedium/: bodytrack-simmedium.cfg  bodytrack-streamcluster-simmedium.cfg  canneal-simmedium.cfg  canneal-streamcluster-simmedium.cfg  fluidanimate-simmedium.cfg  fluidanimate-streamcluster-simmedium.cfg  freqmine-simmedium.cfg  freqmine-streamcluster-simmedium.cfg  raytrace-simmedium.cfg  raytrace-streamcluster-simmedium.cfg  streamcluster-simmedium.cfg  streamcluster-streamcluster-simmedium.cfg
cmr/: .gitignore  .syntastic_cpp_config  CMakeLists.txt  global.h  init_all_cpufreq.py  main.cpp  makefile  monitor.cpp  monitor.h  proc_0,1,2,3,4,5,6,7.out  process.cpp  process.h  test  test.cpp  timer.cpp  timer.h
cmr/pcm/: Makefile  pcm-msr.x  pcm-numa.x  pcm-power.x
offline_solorun_data/native/: bodytrack_cycle.csv  bodytrack_instr.csv  canneal_cycle.csv  canneal_instr.csv  fluidanimate_cycle.csv  fluidanimate_instr.csv  freqmine_cycle.csv  freqmine_instr.csv  raytrace_cycle.csv  raytrace_instr.csv  streamcluster_cycle.csv  streamcluster_instr.csv  swaptions_cycle.csv  swaptions_instr.csv
offline_solorun_data/simmedium/: bodytrack_cycle.csv  bodytrack_instr.csv  canneal_cycle.csv  canneal_instr.csv  fluidanimate_cycle.csv  fluidanimate_instr.csv  freqmine_cycle.csv  freqmine_instr.csv  raytrace_cycle.csv  raytrace_instr.csv  streamcluster_cycle.csv  streamcluster_instr.csv
(+14 files in other folders)
